# EigenMathCMake

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
include/: cgcustommath.hpp
scripts/mac/: create_dmg.py  create_dmg.sh  settings.py
scripts/windows/: build_windows_installer.py  templateWiX.py
src/: cgcustommath.cpp  math.cpp
